upload refactor
