# ent/schema/media.go
@@ -15,14 +15,14 @@ type Media struct {
 // Fields of the Media.
 func (Media) Fields() []ent.Field {
 	return []ent.Field{
-		field.String("file_name").Immutable().MaxLen(255),
 		field.Int64("user_id").Positive(),
+		field.String("file_name").Immutable(),
 		field.String("extension").Immutable().MinLen(2).MaxLen(10),
 		field.String("path").Immutable().Unique(),
 		field.String("location").Nillable().Optional(),
-		field.Int64("size"),                         // in bytes
-		field.Int64("width").Nillable().Optional(),  // in pixels
-		field.Int64("height").Nillable().Optional(), // in pixels
+		field.Int32("size"),                         // in bytes
+		field.Int32("width").Nillable().Optional(),  // in pixels
+		field.Int32("height").Nillable().Optional(), // in pixels
 		field.Time("created_at").Default(time.Now),
 		field.Time("uploaded_at").Nillable().Optional(),
 	}
