# openapi.yaml
@@ -24,6 +24,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.upload.v1.UploadMediaReply'
+    /v1/media/upload:
+        post:
+            tags:
+                - Upload
+            operationId: Upload_UploadMedia
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.upload.v1.UploadMediaRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.upload.v1.UploadMediaReply'
 components:
     schemas:
         api.upload.v1.Media:
@@ -40,13 +58,13 @@ components:
                     type: string
                 size:
                     type: integer
-                    format: int64
+                    format: int32
                 width:
                     type: integer
-                    format: int64
+                    format: int32
                 height:
                     type: integer
-                    format: int64
+                    format: int32
         api.upload.v1.UploadMediaReply:
             type: object
             properties:
@@ -57,6 +75,7 @@ components:
             properties:
                 content:
                     type: string
-            description: message UploadMediaRequest {  string fileName = 1;  bytes source = 2;}
+                fileName:
+                    type: string
 tags:
     - name: Upload
